# spacedeck-protocol

./: .cursorrules  .env.example  .gitignore  LICENSE  NODE_IDENTITY.md  README.md  desktop.ini  docker-compose.yml  llms-full.txt  llms.txt  package-lock.json  package.json
CoW-example/: llms-full.txt  llms.txt
apps/web/: Dockerfile  next.config.js  package.json  tsconfig.tsbuildinfo
docs/: DEPLOYMENT_PLAYBOOK.md  MAINNET_ENGINEERING_PLAN.md  SOVEREIGN_ALCHEMY_PROTOCOL.md  vocs.config.ts
docs/operational_library/: 01_solver_relations_and_onboarding.md  02_protocol_obligations_and_risk_matrix.md  03_developer_relations_and_harness_integration.md  04_client_obligations_and_capital_guardrails.md  05_machine_to_machine_operations.md
docs/pages/: index.md  llms-full.txt  llms.txt
docs/strategic_library/: 01_thesis_and_market_void.md  02_architectural_moat_and_siphon.md  03_gtm_and_worktree_plan.md  04_technical_manifesto_and_shards.md  05_clarity_manifesto_and_glossary.md  05_ecosystem_logistics_and_dependencies.md  06_institutional_magnetization_and_the_siphon.md  07_colosseum_validation_and_the_omega_moat.md  08_the_prism_and_telemetry_paradigm.md  09_the_ai_defi_supply_chain.md
scripts/: ignite_swarm.py  install_spacedeck.sh  spacedeck-cli.bat  spacedeck-cli.py  verify_handshake.py
scripts/alchemy/: genesis_alchemy.py  shard_vessel.py
services/api/: Dockerfile  main.py  near_mpc.py  requirements.txt
services/engine/: Cargo.toml  Dockerfile
services/engine/src/: jito_client.rs  kinetics.rs  lib.rs  main.rs
tests/automated/: Omega_Audit.json  (+2 more)
(+54 files in other folders)
