[package]
name = "spacedeck-engine"
version = "0.1.0"
edition = "2021"
authors = ["Omni-CTO"]
description = "Deterministic Kinetic Engine for Spacedeck Protocol"

[dependencies]
# Web3 & Cryptography
alloy = { version = "0.1", features = ["full"] }
solana-sdk = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async & Networking
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Utility
anyhow = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "spacedeck_engine"
path = "src/lib.rs"

[[bin]]
name = "spacedeck-kinetic-heart"
path = "src/main.rs"
